# fancy-libs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  juvio-test.ipynb  main.py  pyproject.toml
data/: data.xml.dvc
notebooks/: juvio-test.juvio
